--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <section>
+        <div class="loader">
+            <div class="dot" style="--i:0;"></div>
+            <div class="dot" style="--i:1;"></div>
+            <div class="dot" style="--i:2;"></div>
+            <div class="dot" style="--i:3;"></div>
+            <div class="dot" style="--i:4;"></div>
+            <div class="dot" style="--i:5;"></div>
+            <div class="dot" style="--i:6;"></div>
+            <div class="dot" style="--i:7;"></div>
+            <div class="dot" style="--i:8;"></div>
+            <div class="dot" style="--i:9;"></div>         
+        </div>
+        <h2>Barsha...</h2>
+        <div class="loader">
+            <div class="dot" style="--i:0;"></div>
+            <div class="dot" style="--i:1;"></div>
+            <div class="dot" style="--i:2;"></div>
+            <div class="dot" style="--i:3;"></div>
+            <div class="dot" style="--i:4;"></div>
+            <div class="dot" style="--i:5;"></div>
+            <div class="dot" style="--i:6;"></div>
+            <div class="dot" style="--i:7;"></div>
+            <div class="dot" style="--i:8;"></div>
+            <div class="dot" style="--i:9;"></div>         
+        </div>
+    </section>
 </body>
 </html>
